# NoteApp-Saas

./: .env  .env.sample  README.md  main.py  pyproject.toml
docker/: Dockerfile  docker-compose.db.yml  docker-compose.yml
src/apps/admin/: routes.py  schemas.py  services.py
src/apps/note/: routes.py  schemas.py  services.py
src/apps/organization/: routes.py  schemas.py  services.py  test.py
src/apps/permission/: routes.py  schemas.py  services.py
src/apps/permission/routes/: admin_permission_routes.py  organization_permssion_routes.py
src/apps/permission/schemas/: admin_permission_schemas.py  organization_permission_schemas.py
src/apps/permission/services/: admin_permission_services.py  organization_permission_services.py
src/apps/user/: routes.py  schemas.py  services.py
src/configs/: env.py
src/core/: database.py  routes.py
src/dependencies/: dependencies.py  middlewares.py  pendency.py
src/enums/: base.py
src/errors/: base.py
src/scripts/: seed.py  server.py
src/utilities/: base_schema.py  serializers.py
src/utilities/crypto/: jwt.py
